--- a/forAGOL/forDownload/css/layout.css
+++ b/forAGOL/forDownload/css/layout.css
@@ -1,4 +1,4 @@
-﻿ 	  html,body {
+ 	  html,body {
       height:100%;
       width:100%;
       padding:0;
@@ -19,7 +19,7 @@
 	  font-weight:bold;
 	  text-decoration:none;
       }
-	  
+
 	  a:hover{
 	  text-decoration:underline;
 	  }
@@ -30,7 +30,7 @@
 	  color:#fff;
       margin:0;
       }
-	  
+
 	  #headerText{
 	  padding-top:20px;
       padding-left:25px;
@@ -43,8 +43,8 @@
       font-size:20px;
 	  font-weight:bold;
       text-align:left;
-      white-space: nowrap;  
-      overflow: hidden;  
+      white-space: nowrap;
+      overflow: hidden;
       text-overflow: ellipsis;
       -o-text-overflow:ellipsis;
       }
@@ -54,18 +54,18 @@
 	  margin-top:10px;
       overflow: hidden;
       }
-	  
+
 	  #logoArea{
 	  float:right;
 	  padding-top:25px;
 	  padding-right:25px;
 	  text-align:right;
 	  }
-	  
+
 	  #social{
 	  margin-bottom:20px;
 	  }
-	  
+
 	  #msLink{
 	  color:#fff;
 	  font-family:Arial, Helvetica, sans-serif;
@@ -73,12 +73,12 @@
 	  font-size:13px;
 	  outline:none;
 	  }
-	  
+
 	  #logo{
 	  border:none;
 	  outline:none;
 	  }
-	  
+
 	  #logoImg{
 	  border:none;
 	  outline:none;
@@ -87,13 +87,13 @@
       #map {
       margin:0;
       }
-	  
+
 	  #swipeImg{
 	  display:none;
 	  position:absolute;
 	  z-index:2;
 	  }
-	  
+
 	  .moveable {
       position:absolute;
       border-left:1px solid #848484;
@@ -106,7 +106,7 @@
       z-index: 30;
       cursor: col-resize;
 	  }
-	  
+
 	  .moveable:hover {
 	  background-color:#999;
 	  }
@@ -119,21 +119,22 @@
       margin:0;
       padding:10px 15px 5px;
       }
-	  
+
       .map .bingLogo-lg {
       left:18px !important;
       }
-	  
+
 	  #legendCon{
 	  position:absolute;
  	  width:300px !important;
 	  margin-left:100px;
+      border:2px solid #848484;
   	  z-index:100;
 	  }
 
 	  #legendDiv{
 	  display:none;
-	  background:#848484;
+	  background:#dadada;
 	  max-height:450px;
 	  overflow:auto;
 	  padding:10px;
@@ -144,14 +145,14 @@
 	  position:relative;
 	  background:#848484;
 	  margin-top:-1px;
-	  width:125px;
+	  width:100%;
 	  .height:28px;
 	  cursor:pointer;
 	  z-index:100;
 	  color:#fff;
 	  font-family:Arial, Helvetica, sans-serif;
 	  }
-	  
+
 	  #legTogText{
 	  position:relative;
 	  margin:auto;
@@ -161,11 +162,11 @@
 	  color:#fff;
 	  font-family:Arial, Helvetica, sans-serif;
 	  }
-	  
+
 	  g,v {
 	  cursor:pointer;
 	  }
-	
+
 	  #loadingCon{
 	  position:absolute;
 	  z-index:99;
@@ -173,13 +174,13 @@
       top:40%;
 	  text-align:center;
 	  }
-		
+
 	  #loadingDialog{
 	  margin:auto;
 	  background-color:#dadada;
-	  width:300px	
+	  width:300px
 	  }
-		
+
 	  #loadingHeader{
 	  background-color:#444;
 	  color:#fff;
@@ -187,11 +188,11 @@
 	  padding-bottom:10px;
 	  width:300px;
 	  }
-		
+
 	  #loading{
 	  padding-top:10px;
 	  }
-		
+
 	  #loadingImg{
 	  margin-top:5px;
 	  padding-bottom:10px;
