--- a/forStoryMaps/css/layout.css
+++ b/forStoryMaps/css/layout.css
@@ -57,6 +57,7 @@
 
 	  #logoArea{
 	  float:right;
+      width:125px;
 	  padding-top:25px;
 	  padding-right:25px;
       overflow: hidden;
@@ -74,7 +75,7 @@
       color:#fff;
       font-family:Arial, Helvetica, sans-serif;
       font-weight:bold;
-      font-size:0.82em;
+      font-size:12px;
       text-decoration:none;
       outline:none;
       }
