--- a/forAGOL/forDownload/css/layout.css
+++ b/forAGOL/forDownload/css/layout.css
@@ -197,3 +197,17 @@
 	  margin-top:5px;
 	  padding-bottom:10px;
 	  }
+
+      .esriRtl #headerText{
+      float:right;
+      padding-right:25px;
+      }
+
+      .esriRtl #title{
+      text-align:right;
+      }
+
+      .esriRtl #logoArea{
+      float:left;
+      padding-right:25px;
+      }
